src/objects/Incident_Party__c.object
<CustomObject>
    <description>Maps a Contact (student) record to a Disciplinary Incident (case) and specifies the role in which the student was involved, (e.g. victim, perpetrator, wintess, reporter)</description>
    <fields>
        <fullName>Incident__c</fullName>
        <description>This is the &quot;master&quot; case that captured the incident details in which multiple students are involved. The thought being that if there were different remediation cases/interventions that needed to take place they could be Child Cases of this case as well.</description>
        <inlineHelpText>Please choose the incident for which this student was involved.</inlineHelpText>
        <label>Incident</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Parties Involved</relationshipLabel>
        <relationshipName>Incident_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Involved_Party__c</fullName>
        <description>The student/teacher/other contact that was involved in the given incident.  Using the term &quot;Party&quot; here since potentially this could involved a teacher, counselor, etc. so Student was not an ideal choice of term.</description>
        <label>Involved Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Disciplinary Incidents</relationshipLabel>
        <relationshipName>Disciplinary_Incidents</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>This field represents the role in which a particular party involved in an incident has played.</description>
        <inlineHelpText>Please choose the extent to which this party was involved.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetrator</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Victim</fullName>
                </value>
                <value>
                    <fullName>Witness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incident Party</label>
    <nameField>
        <displayFormat>DIN-{0000}</displayFormat>
        <label>Incident Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>